--- a/BestcloudAcademyCaseStudy/BestcloudAcademyCaseStudy.csproj
+++ b/BestcloudAcademyCaseStudy/BestcloudAcademyCaseStudy.csproj
@@ -2,7 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>dc000ef2-65c2-44ee-a044-ca362cf57c25</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+  </ItemGroup>
 
 
 </Project>
